✨ feat: prevent default behavior of img on mobile devices

--- a/src/pages/HomePage/style.scss
+++ b/src/pages/HomePage/style.scss
@@ -53,7 +53,6 @@
     bottom: 20px;
     display: flex;
     align-items: center;
-    width: 100%;
     color: #5d7071;
     font-size: 24px;
 
