--- a/src/pages/ResultPage/style.scss
+++ b/src/pages/ResultPage/style.scss
@@ -162,7 +162,6 @@
     bottom: 20px;
     display: flex;
     align-items: center;
-    width: 100%;
     color: #5d7071;
     font-size: 24px;
 
